Adiciona receita de Cappuccino

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <li><a href="pudim_de_chocolate.html">Pudim de Chocolate</a></li>
         <li><a href="brownie.html">Brownie</a></li>
         <li><a href="Sushi.html">Sushi</a></li>
+        <li><a href="cappuccino.html">Cappuccino</a></li>
     </ul>
 </body>
 
